--- a/MenzoClothing/core/templates/core/login.html
+++ b/MenzoClothing/core/templates/core/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container register h-50">
     <div class="register-heading ">
-        <h2 class="mb-3 text-primary">Register Here</h2>
+        <h2 class="mb-3 text-primary">login Here</h2>
     </div>
    <form action="" method="POST" novalidate>
         {% csrf_token %}
